# recommendation-letter-example-node

./: README.md
node/src/: chain_spec.rs
pallets/insurances/: Cargo.toml
pallets/insurances/src/: lib.rs  tests.rs  weights.rs
pallets/letters/: Cargo.toml
pallets/letters/src/: benchmarking.rs  lib.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/weights/: mod.rs  pallet_insurances.rs  pallet_letters.rs
